# 9p4z

./: .gitattributes  .gitignore  BBS_SPLIT_PLAN.md  CHAT_INTEGRATION.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  Kconfig  LICENSE  NOTICE  QUICKSTART.md  README.md  SPEC.md  WORKFLOW.md  cross.patch  west.yml
.github/workflows/: tests.yml
docs/: 9BBS_IMPLEMENTATION.md  9PIS_GATT_SPECIFICATION.md  BBS_SPLIT_PLAN.md  FEASIBILITY.md  IOS_9PIS_INTEGRATION.md  IOS_CHAT_CLIENT_GUIDE.md  IOS_IMPL_SUMMARY.md  L2CAP_TRANSPORT_DESIGN.md  MEMORY_ARCHITECTURE.md  MIGRATION.md  NCS-BUILD-SETUP.md  PASSTHROUGH_FS.md  PORTABLE_BBS_ARCHITECTURE.md  UNIX_BBS_SERVER_SPEC.md  WORKFLOW.md
scripts/: 9p-run-server.sh  9p-run-tcp-server.sh  9p-run.sh  9p-serve.sh  run_tests.sh  setup-clean-workspace.sh  setup-dev-workspace.sh  setup-isolated-workspace.sh  setup-ncs-all-transports.sh  setup-ncs-l2cap.sh  setup-workspace.sh  west-commands.yml  west_9p.py
src/: client.c  dfu.c  fid.c  gatt_9pis.c  message.c  passthrough_fs.c  proto.c  ramfs.c  server.c  session_pool.c  session_pool_l2cap.c  sysfs.c  tag.c  transport_aether.c  transport_coap.c  transport_coap_client.c  transport_l2cap.c  transport_l2cap_client.c  transport_tcp.c  transport_uart.c  union_fs.c
tests/: CMakeLists.txt  README.md  TEST_STRATEGY.md  client_server_test.c  fid_test.c  message_builder_test.c  message_test.c  prj.conf  protocol_test.c  stress_test.c  tag_test.c  tcp_transport_test.c  testcase.yaml  transport_test.c  uart_transport_test.c
tests/boards/: native_posix.overlay  qemu_x86.overlay
(+145 files in other folders)
